# StarRing

./: .gitignore  main.py  pyproject.toml
app/: main.py
app/agents/: __init__.py  requirement.py  testing.py
app/api/v1/: health.py
app/config/: __init__.py  settings.py
app/core/: __init__.py
app/db/: __init__.py
app/models/: __init__.py
app/orchestration/: __init__.py
app/rag/: __init__.py
app/utils/: __init__.py
docs/: 目录结构说明.md
scripts/: init_db.py
src/app/: __init__.py
src/app/agents/: coding.py  documentation.py
src/app/api/: __init__.py
src/app/api/v1/: __init__.py  router.py  tasks.py
src/app/core/: exceptions.py
src/app/db/: session.py
src/app/models/: task.py
src/app/orchestration/: pipeline.py
src/app/rag/: client.py  indexer.py  retriever.py
src/app/schemas/: __init__.py  task.py
src/app/utils/: db_schema.py  file_writer.py
tests/: __init__.py  conftest.py  test_main.py
