[project]
name = "starring"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
]

[project.scripts]
init-db = "scripts.init_db:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = true

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
