[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starring"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.9",
    "fastapi>=0.137.1",
    "javalang>=0.13.0",
    "langgraph>=1.2.5",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
    "uvicorn>=0.49.0",
]



[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
